Added newsletter section

--- a/index.html
+++ b/index.html
@@ -405,7 +405,24 @@
   </section>
 
   <!-- ============== NEWSLETTER ============= -->
-  
+  <section class="section newsletter container">
+    <div class="newsletter__bg grid">
+      <div>
+        <h2 class="newsletter__title">
+          Subscribe Our <br> Newsletter
+        </h2>
+
+        <p class="newsletter__description">
+          Don't miss out on your discounts. Subscribe to our email newsletter to get the best offers, discounts, coupons, gifts and much more.
+        </p>
+      </div>
+
+      <form action="#" class="newsletter__subscribe">
+        <input type="email" class="newsletter__input" placeholder="Enter your email">
+        <button class="button">SUBSCRIBE</button>
+      </form>
+    </div>
+  </section>
   <!-- ============== SWIPER JS ============= -->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
