--- a/index.html
+++ b/index.html
@@ -423,6 +423,85 @@
       </form>
     </div>
   </section>
+
+  <!-- ============== FOOTER ============= -->
+  <footer class="footer section">
+    <div class="footer__container container grid">
+      <div class="footer__content">
+        <h3 class="footer__title">Our information</h3>
+
+        <ul class="footer__list">
+          <li>Russia</li>
+          <li>Moscow</li>
+          <li>8-800-555-55-55</li>
+        </ul>
+      </div>
+
+      <div class="footer__content">
+        <h3 class="footer__title">About us</h3>
+
+        <ul class="footer__links">
+          <li>
+            <a href="#" class="footer__link">Support Center</a>
+          </li>
+          <li>
+            <a href="#" class="footer__link">Customer Support</a>
+          </li>
+          <li>
+            <a href="#" class="footer__link">About Us</a>
+          </li>
+          <li>
+            <a href="#" class="footer__link">Copy Right</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer__content">
+        <h3 class="footer__title">Product</h3>
+
+        <ul class="footer__links">
+          <li>
+            <a href="#" class="footer__link">Road bikes</a>
+          </li>
+          <li>
+            <a href="#" class="footer__link">Mountain bikes</a>
+          </li>
+          <li>
+            <a href="#" class="footer__link">Electric</a>
+          </li>
+          <li>
+            <a href="#" class="footer__link">Accesories</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer__content">
+        <h3 class="footer__title">Social</h3>
+
+        <ul class="footer__social">
+          <li>
+            <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
+              <i class="bx bxl-facebook"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://twitter.com/" target="_blank" class="footer__social-link">
+              <i class="bx bxl-twitter"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/" target="_blank" class="footer__social-link">
+              <i class="bx bxl-instagram"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <span class="footer__copy">
+      &#169; <span id="date"></span> Beck. All rigths reserved
+    </span>
+  </footer>
   <!-- ============== SWIPER JS ============= -->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
