--- a/index.html
+++ b/index.html
@@ -502,6 +502,11 @@
       &#169; <span id="date"></span> Beck. All rigths reserved
     </span>
   </footer>
+
+  <!-- ============== SCROLL UP ============= -->
+  <a href="#" class="scrollUp" id="scroll-up">
+    <i class='bx bx-up-arrow-alt scrollUp__icon'></i>
+  </a>
   <!-- ============== SWIPER JS ============= -->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
