Added cart section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,101 @@
     </nav>
   </header>
 
+  <!-- ============== MY CART ============= -->
+  <div class="cart" id="cart">
+    <i class='bx bx-x cart__close'></i>
+
+    <h2 class="cart__title-center">My cart</h2>
+
+    <div class="cart__container">
+      <aritcle class="cart__card">
+        <div class="cart__box">
+          <img src="assets/img/featured1.png" alt="watch" class="cart__img">
+        </div>
+
+        <div class="cart__details">
+          <h3 class="cart__title">Jazzmaster</h3>
+          <span class="cart__price">$1050</span>
+
+          <div class="cart__amount">
+            <div class="cart__amount-content">
+              <span class="cart__amount-box">
+                <i class="bx bx-minus"></i>
+              </span>
+
+              <span class="cart__amout-number">1</span>
+
+              <span class="cart__amount-box">
+                <i class="bx bx-plus"></i>
+              </span>
+            </div>
+
+            <i class="bx bx-trash-alt cart__amout-trash"></i>
+          </div>
+        </div>
+      </aritcle>
+
+      <aritcle class="cart__card">
+        <div class="cart__box">
+          <img src="assets/img/featured2.png" alt="watch" class="cart__img">
+        </div>
+
+        <div class="cart__details">
+          <h3 class="cart__title">Rose Gold</h3>
+          <span class="cart__price">$850</span>
+
+          <div class="cart__amount">
+            <div class="cart__amount-content">
+              <span class="cart__amount-box">
+                <i class="bx bx-minus"></i>
+              </span>
+
+              <span class="cart__amout-number">1</span>
+
+              <span class="cart__amount-box">
+                <i class="bx bx-plus"></i>
+              </span>
+            </div>
+
+            <i class="bx bx-trash-alt cart__amout-trash"></i>
+          </div>
+        </div>
+      </aritcle>
+
+      <aritcle class="cart__card">
+        <div class="cart__box">
+          <img src="assets/img/featured3.png" alt="watch" class="cart__img">
+        </div>
+
+        <div class="cart__details">
+          <h3 class="cart__title">Longines Rose</h3>
+          <span class="cart__price">$980</span>
+
+          <div class="cart__amount">
+            <div class="cart__amount-content">
+              <span class="cart__amount-box">
+                <i class="bx bx-minus"></i>
+              </span>
+
+              <span class="cart__amout-number">1</span>
+
+              <span class="cart__amount-box">
+                <i class="bx bx-plus"></i>
+              </span>
+            </div>
+
+            <i class="bx bx-trash-alt cart__amout-trash"></i>
+          </div>
+        </div>
+      </aritcle>
+    </div>
+
+    <div class="cart__prices">
+      <span class="cart__prices-item">3 items</span>
+      <span class="cart__prices-total">$2880</span>
+    </div>
+  </div>
+
   <!-- ============== MAIN ============= -->
   <main class="main">
     <!-- ============== HOME ============= -->
