Added dark theme

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
       </div>
 
       <div class="nav__btns">
+        <!-- Theme change button -->
+        <i class="bx bx-moon theme__change" id="theme-change"></i>
+
         <div class="nav__shop" id="cart-shop">
           <i class='bx bx-shopping-bag'></i>
         </div>
